--- a/scripts/templates/build.xml
+++ b/scripts/templates/build.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="build" basedir="." default="readme">
     <exec command="pwd" dir="." checkreturn="true" outputProperty="build.path" />
-    <property name="phingy.path" value="/share/phingy/v2/" />
+    <property name="phingy.path" value="${build.path}/vendor/3ev/phingy" />
     <if>
         <available file='${phingy.path}' type='dir' />
         <then>        
             <echo msg="LOADING PHINGY FROM ${phingy.path}" level="error" />
             
             <import file="${build.path}/config/project.xml" />
-            <import file="${phingy.path}build.xml" />
-            <import file="${phingy.path}platform/typo3.xml" />
-            <import file="${phingy.path}database.xml" />
+            <import file="${phingy.path}/scripts/core/build.xml" />
+            <import file="${phingy.path}/scripts/platform/typo3.xml" />
+            <import file="${phingy.path}/scripts/core/database.xml" />
             <!-- Go away! Don't add stuff here! -->
         </then>
         <else>
