--- a/scripts/templates/typo3.xml
+++ b/scripts/templates/typo3.xml
@@ -18,6 +18,21 @@
 
 
     <!-- ==================================== -->
+    <!--              Properties              -->
+    <!-- ==================================== -->
+
+
+
+
+    <!--
+        Name of the extension that contains the site assets to compile
+    -->
+    <!-- <property name="site_assets_ext" value="tev_site" /> -->
+
+
+
+
+    <!-- ==================================== -->
     <!--                Tasks                 -->
     <!-- ==================================== -->
 
