Make sure assets are created during initial build

--- a/scripts/templates/typo3.xml
+++ b/scripts/templates/typo3.xml
@@ -27,7 +27,7 @@
     <!--
         Name of the extension that contains the site assets to compile
     -->
-    <!-- <property name="site_assets_ext" value="tev_site" /> -->
+    <property name="site_assets_ext" value="tev_site" />
 
 
 
