--- a/scripts/templates/typo3.xml
+++ b/scripts/templates/typo3.xml
@@ -6,14 +6,14 @@
 
     <!-- ==================================== -->
     <!--             Dependencies             -->
-    <!-- ==================================== --> 
-    
+    <!-- ==================================== -->
+
 
 
 
     <import file="${phingy.path}/scripts/platform/typo3.xml" />
     <import file="${phingy.path}/scripts/platform/sphinx.xml" />
-    
+
 
 
 
@@ -27,6 +27,7 @@
     <!--
         Name of the extension that contains the site assets to compile
     -->
+
     <property name="site_assets_ext" value="tev_site" />
 
 
@@ -38,20 +39,25 @@
 
 
 
-    
+
+    <target name="project:config" depends="build:config, typo3:config, sphinx:config" hidden="true">
+        <echo msg="Running project:config" />
+    </target>
+
+
     <target name="project:build:before" hidden="true">
         <echo msg="Running project:build:before" />
         <phingcall target="typo3:build:before" />
         <phingcall target="sphinx:build:before" />
     </target>
-    
+
 
     <target name="project:build:after" hidden="true">
         <echo msg="Running project:build:after" />
         <phingcall target="typo3:build:after" />
         <phingcall target="sphinx:build:after" />
     </target>
-    
+
 
     <target name="project:build:housekeeping" hidden="true">
         <echo msg="Running project:build:housekeeping" />
