Further tidying, whitespace etc

--- a/scripts/templates/default.xml
+++ b/scripts/templates/default.xml
@@ -55,9 +55,7 @@
 
     <target name="project:build:housekeeping" hidden="true">
         <echo msg="Running project:build:housekeeping" />
-        <!--
-            Cleanup build
-        -->
+        <!-- Cleanup build -->
     </target>
 
 
