Set correct visibility for Laravel config

--- a/scripts/templates/laravel.xml
+++ b/scripts/templates/laravel.xml
@@ -35,8 +35,9 @@
 
 
 
-    <target name="project:config" depends="laravel:config" hidden="true">
+    <target name="project:config" description="Configure application" depends="laravel:config">
         <echo msg="Running project:config" />
+        <phingcall target="build:save_config" />
     </target>
 
 
