--- a/scripts/templates/project_auto.xml
+++ b/scripts/templates/project_auto.xml
@@ -15,6 +15,8 @@
         <property name="app.mail" value="0" />
         <property name="build.elasticsearch_host" value="http://localhost:9200" />
         <property name="logrotate.gpg.pass" value="logrotate" />
+
+        <phingcall target="build:save_config" />
     </target>
 
     <target name="project:build:before" hidden="true">
